--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -1,23 +1,28 @@
 <section class="todoapp">
       <header class="header">
         <h1><%= @list.name %></h1>
-        <input class="new-todo" placeholder="Add an item." autofocus="">
+        <%= form_for([@list, @item]) do |f| %>
+          <%= f.text_field :description, class: "new-todo", placeholder: (@item.errors.full_messages_for(:description).first || "Enter new item...") %>
+          <%= f.submit style: "display: none" %>
+        <% end %>
       </header>
 
       <section class="main">
-
+        <input class="toggle-all" type="checkbox">
+        <label for="toggle-all">Mark all as complete</label>
         <ul class="todo-list">
-          <li>
+          <% @list.items.each do |item| %>
+          <li class="<%= "completed" if item.complete? %>">
             <div class="view">
-              <label>Milk</label>
+              <%= form_for([@list, item]) do |f| %>
+                <%= f.check_box :status, :class => "toggle", :checked => (true if item.complete?) %>
+                <%= f.submit %>
+                <!-- <input class="toggle" type="checkbox" <%= "checked='checked'" if item.complete? %>> -->
+              <% end %>
+              <label><%= item.description %></label>
             </div>
           </li>
-          <li>
-            <div class="view">
-              <label>Cookies</label>
-            </div>
-          </li>
-
+          <% end %>
         </ul>
       </section>
 
